--- a/src/style/_settings.scss
+++ b/src/style/_settings.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:wght@100;300;400;700;900&display=swap");
+
 *,
 *:before,
 *:after {
