--- a/src/style/_settings.scss
+++ b/src/style/_settings.scss
@@ -1,3 +1,4 @@
+@use "./variables" as *;
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:wght@100;300;400;700;900&display=swap");
 
 *,
@@ -60,12 +61,10 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   font: inherit;
-  vertical-align: baseline;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  text-size-adjust: none;
+  color: inherit;
+  text-decoration: none;
+  font-family: $font2;
 }
 
 footer,
@@ -105,4 +104,11 @@ table {
 
 input {
   border-radius: 0;
+}
+body {
+  background-color: $bgc;
+}
+*::selection {
+  background-color: $c1;
+  color: $bgc;
 }
