--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -1,70 +1,56 @@
 @use "../variables" as *;
-main {
-  h2 {
-    font-size: calc(1rem + 1.5vw);
-    font-weight: 700;
-    margin: 4vh 0 4vh 0;
-    text-align: center;
-  }
-  .home-card-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin: 0 4vw 0 4vw;
-    .home-card {
-      position: relative;
+body {
+  main {
+    position: relative;
+    h2 {
+      font-size: calc(1rem + 1.5vw);
+      font-weight: 700;
+      margin: 4vh 0 4vh 0;
+      text-align: center;
+    }
+    .movie-cards-container {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 15vw;
-      height: 30vw;
-      margin: 2vw 0 2vw 0;
-      border-radius: 10px;
-      border: 2px solid $c1;
-      transition: all 0.3s ease-in-out;
-      &:hover {
-        transform: scale(1.05);
-        cursor: pointer;
+      flex-direction: row;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      margin: 0 4vw 0 4vw;
+    }
+  }
+  .active-card-container {
+    z-index: 3;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    .active-card {
+      position: relative;
+      button {
+        position: absolute;
+        top: 5px;
+        left: 5px;
       }
-      img {
-        width: 100%;
-        height: 70%;
-        object-fit: cover;
-        border-radius: 8px 8px 0 0;
-        box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.4);
-        margin-bottom: 15px;
-      }
-      h3 {
-        font-size: calc(0.8rem + 0.7vw);
-        font-weight: 700;
-        margin-bottom: 5px;
-        text-align: center;
-      }
-      @media (max-width: 1600px) {
-        width: 20vw;
-        height: 40vw;
-        h3 {
-          font-size: calc(1rem + 0.7vw);
+      .img-container {
+        position: relative;
+        width: 80%;
+        height: 50vh;
+        margin: 0 auto;
+        box-shadow: inset 0 0 100px -1px rgba(0, 0, 0, 1);
+        background: linear-gradient(
+          0deg,
+          rgba(0, 0, 0) 0%,
+          rgba(0, 0, 0, 0) 100%
+        );
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          z-index: -1;
+          position: relative;
         }
       }
-      @media (max-width: 1400px) {
-        width: 25vw;
-        height: 50vw;
-      }
-      @media (max-width: 1200px) {
-        width: 30vw;
-        height: 60vw;
-      }
-      @media (max-width: 900px) {
-        width: 40vw;
-        height: 80vw;
-      }
-      @media (max-width: 768px) {
-        width: 60vw;
-        height: 100vw;
-        margin: 2vw 0 2vw 0;
-      }
     }
+  }
+  &.no-scroll {
+    overflow: hidden;
   }
 }
