--- a/src/style/components/_active-card.scss
+++ b/src/style/components/_active-card.scss
@@ -1,3 +1,5 @@
+@use "../variables" as *;
+
 body {
   .active-card-container {
     z-index: 5;
@@ -6,17 +8,14 @@ body {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.8);
     box-shadow: 0 0 50px 50px rgba(0, 0, 0, 0.8);
-
+    overflow-y: scroll;
     .active-card {
       position: relative;
-      button {
-        position: absolute;
-        top: 5px;
-        left: 5px;
-      }
+      width: 60%;
+      margin: 0 auto;
       .img-container {
         position: relative;
-        width: 80%;
+        width: 100%;
         height: 50vh;
         margin: 0 auto;
         box-shadow: inset 0 0 100px -1px rgba(0, 0, 0, 1);
@@ -31,6 +30,92 @@ body {
           object-fit: cover;
           z-index: -1;
           position: relative;
+        }
+        button {
+          position: absolute;
+          top: 10px;
+          right: 10px;
+          border: none;
+          background: $bgc;
+          border-radius: 10px;
+          cursor: pointer;
+          svg {
+            font-size: calc(25px + 1vw);
+            color: $c1;
+          }
+        }
+        .rating {
+          position: absolute;
+          left: 20px;
+          bottom: 20px;
+          width: 120px;
+          height: 120px;
+          .outer {
+            height: 120px;
+            width: 120px;
+            border-radius: 50%;
+            padding: 20px;
+            color: $bgc;
+            text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            .inner {
+              height: 80px;
+              width: 80px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              border-radius: 50%;
+              font-weight: 600;
+              font-size: calc(20px + 0.5vw);
+            }
+          }
+          svg {
+            position: absolute;
+            top: 0;
+            left: 0;
+            circle {
+              fill: none;
+              stroke: url(#Color);
+              stroke-width: 15;
+              stroke-dasharray: 340;
+            }
+          }
+        }
+      }
+      .content-container {
+        width: 100%;
+        margin: 0 auto;
+        padding: 20px;
+        background-color: $bgc;
+        h2 {
+          font-size: calc(20px + 1vw);
+          font-weight: 600;
+          margin: 20px 0;
+          text-align: center;
+        }
+        p {
+          font-size: calc(15px + 0.4vw);
+          font-weight: 400;
+          margin-bottom: 20px;
+          text-align: center;
+        }
+        .related-movies-container {
+          h3 {
+            font-size: calc(15px + 0.5vw);
+            font-weight: 600;
+            margin: 40px 0;
+            text-align: center;
+          }
+          ul {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            grid-gap: 10px;
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            li {
+              text-align: center;
+            }
+          }
         }
       }
     }
