--- a/src/style/components/_movie-card.scss
+++ b/src/style/components/_movie-card.scss
@@ -7,7 +7,6 @@
   flex-direction: column;
   align-items: center;
   width: 15vw;
-  height: 30vw;
   margin: 2vw 0 2vw 0;
   border-radius: 10px;
   border: 2px solid $c1;
@@ -22,12 +21,11 @@
     object-fit: cover;
     border-radius: 8px 8px 0 0;
     box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.4);
-    margin-bottom: 15px;
   }
   h3 {
-    font-size: calc(0.8rem + 0.7vw);
+    font-size: calc(0.8rem + 80%);
     font-weight: 700;
-    margin-bottom: 5px;
+    margin: 20px 0;
     text-align: center;
   }
   .movie-infos {
@@ -36,34 +34,40 @@
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
-    height: 100%;
     margin-bottom: 5px;
     .origin {
-      position: absolute;
-      top: 15px;
       display: flex;
-      justify-content: space-between;
+      justify-content: space-around;
+      align-items: center;
+      flex-wrap: wrap;
       width: 100%;
       font-size: 1.2em;
       padding: 0 20px;
-    }
-    .genre {
-      position: absolute;
-      width: 100%;
-      bottom: 15px;
       p {
         text-align: center;
-        margin-bottom: 20px;
+        white-space: nowrap;
+      }
+      span {
+        font-weight: 700;
+      }
+    }
+    .genre {
+      width: 100%;
+      h4 {
+        text-align: center;
         font-size: 1.12em;
+        margin: 20px 0;
       }
       ul {
-        height: 100%;
-        display: flex;
-        justify-content: space-around;
-        align-items: flex-end;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: repeat(2, minmax(25%, 1fr));
+        grid-gap: 10px;
         font-size: 1.1em;
         li {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          white-space: nowrap;
           padding: 3px 5px;
           background-color: #{$c5}33;
           border-radius: 5px;
@@ -73,26 +77,21 @@
   }
   @media (max-width: 1600px) {
     width: 20vw;
-    height: 40vw;
     h3 {
       font-size: calc(1rem + 0.7vw);
     }
   }
   @media (max-width: 1400px) {
     width: 25vw;
-    height: 50vw;
   }
   @media (max-width: 1200px) {
     width: 30vw;
-    height: 70vw;
   }
   @media (max-width: 900px) {
     width: 40vw;
-    height: 88vw;
   }
   @media (max-width: 768px) {
     width: 80vw;
-    height: 70vh;
     margin: 2vw 0 2vw 0;
   }
 }
