--- a/src/style/components/_active-card.scss
+++ b/src/style/components/_active-card.scss
@@ -82,10 +82,23 @@ body {
         }
       }
       .content-container {
+        position: relative;
         width: 100%;
         margin: 0 auto;
         padding: 20px;
         background-color: $bgc;
+        .like-button {
+          position: absolute;
+          width: 2vw;
+          height: 2vw;
+          top: 10px;
+          right: 10px;
+          svg {
+            width: 100%;
+            height: 100%;
+            color: $c4;
+          }
+        }
         h2 {
           font-size: calc(20px + 1vw);
           font-weight: 600;
