--- a/src/style/components/_movie-card.scss
+++ b/src/style/components/_movie-card.scss
@@ -22,6 +22,18 @@
     border-radius: 8px 8px 0 0;
     box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.4);
   }
+  .like-button {
+    position: absolute;
+    width: 2vw;
+    height: 2vw;
+    top: 10px;
+    left: 10px;
+    svg {
+      width: 100%;
+      height: 100%;
+      color: $c4;
+    }
+  }
   h3 {
     font-size: calc(0.8rem + 80%);
     font-weight: 700;
