--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,5 +1,6 @@
 @import "./settings";
 @import "./components/header";
 @import "./pages/home";
+@import "./pages/favorites";
 @import "./components/movie-card";
 @import "./components/active-card";
