--- a/src/style/components/_active-card.scss
+++ b/src/style/components/_active-card.scss
@@ -9,6 +9,12 @@ body {
     background-color: rgba(0, 0, 0, 0.8);
     box-shadow: 0 0 50px 50px rgba(0, 0, 0, 0.8);
     overflow-y: scroll;
+    @media (pointer: coarse) {
+      scrollbar-width: none;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
     .active-card {
       position: relative;
       width: 60%;
@@ -65,7 +71,7 @@ body {
               align-items: center;
               border-radius: 50%;
               font-weight: 600;
-              font-size: calc(20px + 0.5vw);
+              font-size: calc(1.2em + 0.4vw);
             }
           }
           svg {
@@ -89,8 +95,8 @@ body {
         background-color: $bgc;
         .like-button {
           position: absolute;
-          width: 2vw;
-          height: 2vw;
+          width: calc(2em + 1vw);
+          height: calc(2em + 1vw);
           top: 10px;
           right: 10px;
           svg {
@@ -100,8 +106,6 @@ body {
           }
         }
         h2 {
-          font-size: calc(20px + 1vw);
-          font-weight: 600;
           margin: 20px 0;
           text-align: center;
         }
@@ -112,9 +116,8 @@ body {
           text-align: center;
         }
         .related-movies-container {
+          width: 100%;
           h3 {
-            font-size: calc(15px + 0.5vw);
-            font-weight: 600;
             margin: 40px 0;
             text-align: center;
           }
@@ -127,6 +130,17 @@ body {
             margin: 0;
             li {
               text-align: center;
+              .card-container {
+                img {
+                  width: 100%;
+                  height: 80%;
+                  object-fit: cover;
+                  border-radius: 10px;
+                }
+              }
+            }
+            @media (max-width: 768px) {
+              grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
             }
           }
         }
