--- a/src/style/components/_movie-card.scss
+++ b/src/style/components/_movie-card.scss
@@ -17,15 +17,15 @@
   }
   img {
     width: 100%;
-    height: 70%;
+    height: 55%;
     object-fit: cover;
     border-radius: 8px 8px 0 0;
     box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.4);
   }
   .like-button {
     position: absolute;
-    width: 2vw;
-    height: 2vw;
+    width: calc(2em + 1vw);
+    height: calc(2em + 1vw);
     top: 10px;
     left: 10px;
     svg {
@@ -35,8 +35,6 @@
     }
   }
   h3 {
-    font-size: calc(0.8rem + 80%);
-    font-weight: 700;
     margin: 20px 0;
     text-align: center;
   }
@@ -46,9 +44,11 @@
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
+    height: 100%;
     margin-bottom: 5px;
     .origin {
       display: flex;
+      flex-direction: column;
       justify-content: space-around;
       align-items: center;
       flex-wrap: wrap;
@@ -58,6 +58,9 @@
       p {
         text-align: center;
         white-space: nowrap;
+        &:first-child {
+          margin-bottom: 10px;
+        }
       }
       span {
         font-weight: 700;
@@ -67,17 +70,17 @@
       width: 100%;
       h4 {
         text-align: center;
-        font-size: 1.12em;
         margin: 20px 0;
       }
       ul {
-        display: grid;
-        grid-template-columns: repeat(2, minmax(25%, 1fr));
+        display: flex;
+        flex-wrap: wrap;
+        padding: 20px 20px 0 20px;
+
         grid-gap: 10px;
         font-size: 1.1em;
         li {
-          display: flex;
-          justify-content: center;
+          width: min-content;
           align-items: center;
           white-space: nowrap;
           padding: 3px 5px;
@@ -85,6 +88,35 @@
           border-radius: 5px;
         }
       }
+    }
+    .synopsis {
+      width: 100%;
+      padding: 0 20px;
+      height: 150px;
+      overflow: hidden;
+      p {
+        height: 100%;
+        padding-top: 20px;
+        text-align: justify;
+        font-size: 1.1em;
+      }
+    }
+  }
+  &::after {
+    content: "";
+    position: absolute;
+    height: 60px;
+    width: 100%;
+    background: linear-gradient(180deg, rgba(195, 34, 34, 0) 0%, $bgc 85%);
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+    border-radius: 0 0 8px 8px;
+  }
+  @media (pointer: coarse) {
+    &:hover {
+      transform: none !important;
+      cursor: initial;
     }
   }
   @media (max-width: 1600px) {
